--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0px;
     font-family: 'Poppins', sans-serif;
 }
 h1{
@@ -17,9 +18,9 @@ h1{
     width: 100%;
 }
 .top-banner{
-    background-image: url(images/top-banner.png);
+    background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
-}
+    }
 .section{
     height: 500px;
 }
