--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 h1{
     font-size: 50px;
 }
+.h2{
+    font-size: 40px;
+}
 .name-highlight{
     color: orange;
 }
@@ -23,4 +26,13 @@ h1{
     }
 .section{
     height: 500px;
+    padding-bottom: 150px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightSalmon,tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: whitesmoke;
+    font-weight: 700;
 }
