--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 h1{
-    font-size: 50px;
+    font-size: 44px;
 }
 .h2{
-    font-size: 40px;
+    font-size: 38px;
 }
 .name-highlight{
     color: orange;
@@ -23,7 +23,7 @@ h1{
 .top-banner{
     background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
-    }
+}
 .section{
     height: 500px;
     padding-bottom: 150px;
@@ -35,4 +35,9 @@ h1{
     border-radius: 5px;
     color: whitesmoke;
     font-weight: 700;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
